--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "kdyby/coding-standard": "^1.0@dev",
         "phpstan/phpstan-shim": "^0.7",
         "phpunit/phpunit": "~6.2",
-        "symfony/yaml": "^3.3|^4.0"
+        "symfony/yaml": "^3.3|^4.0",
+        "jakub-onderka/php-parallel-lint": "^0.9.2"
     },
     "autoload": {
         "psr-4": {
