--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ jobs:
       script:
         - vendor/bin/phpunit -c tests/phpunit.xml --coverage-clover tests/coverage.xml
       after_script:
-        - travis_retry wget -O /tmp/coveralls.phar https://github.com/satooshi/php-coveralls/releases/download/v1.0.1/coveralls.phar
+        - travis_retry wget -O /tmp/coveralls.phar https://github.com/php-coveralls/php-coveralls/releases/download/v2.0.0/php-coveralls.phar
         - php /tmp/coveralls.phar --verbose --config tests/.coveralls.yml
 
     - stage: Lint
