--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "require": {
         "php": "^7.1",
-        "kdyby/datetime-provider": "@dev",
+        "kdyby/datetime-provider": "^1.0",
         "kdyby/strict-objects": "^1.0",
         "symfony/config": "^3.3|^4.0",
         "symfony/expression-language": "^3.3|^4.0",
